--- a/basicaculator.html
+++ b/basicaculator.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <span id="num1-el"></span>
+    <span id="num1-el">hi</span>
     <span id="num2-el"></span>
     <br>
     <button id="add" onclick="add()">Add</button>
